# Nginx4AdServer

./: .gitignore  CMakeLists.txt  README  build  build.sh  dist.sh  install.sh  maketest.sh  maketool.sh  reconfigure  run.sh
adservice/: run.sh
auto/: make
src/adservice/adservice/: CMakeLists.txt  config  logging.cpp  logging.h  main.cpp
src/adservice/adservice/service/: kafka_checker.cpp  locallog_collector.cpp
src/adservice/adservice/service/common/: atomic.h  constants.h  functions.h  platform.h  spinlock.h  types.h
src/adservice/adservice/service/core/: config_types.cpp  config_types.h  core_ad_sizemap.cpp  core_ad_sizemap.h  core_cm_manager.cpp  core_cm_manager.h  core_executor.cpp  core_executor.h  core_ip_manager.cpp  core_ip_manager.h  core_scenario_manager.cpp  core_scenario_manager.h  core_threadlocal_manager.cpp  core_threadlocal_manager.h  core_typetable.cpp  core_typetable.h
src/adservice/adservice/service/core/adselectv2/: ad_select_client.cpp  ad_select_client.h  ad_select_interface.h  addata.cpp  addata.h  addatamanager.cpp  addatamanager.h
src/adservice/adservice/service/core/logic/: abstract_query_task.cpp  abstract_query_task.h  abstract_service.h  bid_query_task.cpp  bid_query_task.h  click_query_task.cpp  click_query_task.h  mapping_query_task.cpp  mapping_query_task.h  show_query_task.cpp  show_query_task.h  task_thread_data.h  tool_query_task.cpp  tool_query_task.h  trace_task.cpp  trace_task.h
src/adservice/adservice/service/core/logpusher/: kafka_log_producer.cpp  kafka_log_producer.h  log_producer.h  log_pusher.cpp  log_pusher.h
src/adservice/adservice/service/core/model/: idseq.cpp  idseq.h  source_id.cpp  source_id.h  source_record.cpp  source_record.h  user.cpp  user.h
src/adservice/adservice/service/libutil/: AdAcbm.cpp  AdAcbm.h  AdBuff.h  AdGlobal.h  AdIpc.cpp  AdIpc.h  AdLock.h  AdMd5.cpp  AdMd5.h  AdSharedLib.h  AdTime.h  AdUaParser.h  AdUtil.h  CMakeLists.txt
src/adservice/adservice/service/libutil/test/: AESPro2.cpp  Makefile  md5test.cpp
src/adservice/adservice/service/protocol/: .gitignore  MakeProtocol.sh  avdl2cpp.sh
src/adservice/adservice/service/protocol/2345/: adx2345_bidding_handler.cpp  adx2345_bidding_handler.h
src/adservice/adservice/service/protocol/360/: 360max_bidding_handler.cpp  360max_bidding_handler.h  360max_price.cpp  360max_price.h  max-bidding.pb.cpp  max-bidding.pb.h
src/adservice/adservice/service/protocol/360/proto/: max-bidding.proto
src/adservice/adservice/service/protocol/baidu/: baidu_bidding.h  baidu_bidding.pb.cpp  baidu_bidding.pb.h  baidu_bidding_handler.cpp  baidu_bidding_handler.h  baidu_price.cpp  baidu_price.h
src/adservice/adservice/service/protocol/baidu/proto/: baidu_bidding.proto
src/adservice/adservice/service/protocol/base/: abstract_bidding_handler.cpp  abstract_bidding_handler.h
src/adservice/adservice/service/protocol/debug/: debug.pb.cpp  debug.pb.h
src/adservice/adservice/service/protocol/debug/proto/: debug.proto
src/adservice/adservice/service/protocol/dsps/: dsp_handler_manager.cpp  dsp_handler_manager.h  mtty_bidding.pb.cpp  mtty_bidding.pb.h
src/adservice/adservice/service/protocol/dsps/dsp_handlers/: default_dsp_handler.cpp  default_dsp_handler.h
src/adservice/adservice/service/protocol/dsps/proto/: mtty_bidding.proto
src/adservice/adservice/service/protocol/guangyin/: guangyin_bidding.pb.cpp  guangyin_bidding.pb.h  guangyin_bidding_handler.cpp  guangyin_bidding_handler.h  guangyin_price.cpp  guangyin_price.h
src/adservice/adservice/service/protocol/inmobi/: inmobi_bidding_handler.cpp  inmobi_bidding_handler.h
src/adservice/adservice/service/protocol/kupai/: kupai_bidding_handler.cpp  kupai_bidding_handler.h  kupai_price_decode.cpp  kupai_price_decode.h  openrtb.pb.cpp  openrtb.pb.h  wk_adx_rtb_ext.pb.cpp  wk_adx_rtb_ext.pb.h
src/adservice/adservice/service/protocol/liebao/: liebao_bidding_handler.cpp  liebao_bidding_handler.h
src/adservice/adservice/service/protocol/log/: log.h  logstring.cpp
src/adservice/adservice/service/protocol/m_baidu/: baidu_bidding.pb.cpp  baidu_bidding_handler.cpp  baidu_bidding_handler.h
src/adservice/adservice/service/protocol/mtty/: mtty_bidding_handler.cpp  mtty_bidding_handler.h
src/adservice/adservice/service/protocol/netease/: netease_bidding_handlerv2.cpp  netease_bidding_handlerv2.cpp.bak  netease_bidding_handlerv2.h  netease_bidding_handlerv2.h.bak  nex_bidding_handler.cpp  nex_bidding_handler.h  nex_price.cpp  nex_price.h
src/adservice/adservice/service/protocol/sohu/: sohuRTB.pb.cpp  sohuRTB.pb.h  sohu_bidding_handler.cpp  sohu_bidding_handler.h  sohu_price.cpp  sohu_price.h
src/adservice/adservice/service/protocol/tanx/: tanx_bidding.pb.cpp  tanx_bidding.pb.h  tanx_bidding_handler.cpp  tanx_bidding_handler.h  tanx_device_id.cpp  tanx_price.cpp  tanx_price.h
src/adservice/adservice/service/protocol/tencent_gdt/: gdt.pb.cpp  gdt.pb.h  gdt_bidding_handler.cpp  gdt_bidding_handler.h  tencent_gdt_price.cpp  tencent_gdt_price.h
src/adservice/adservice/service/protocol/yidian/: yidian_bidding_handler.cpp  yidian_bidding_handler.h
src/adservice/adservice/service/protocol/youku/: youku_bidding_handlerv2.cpp  youku_bidding_handlerv2.h  youku_price.cpp  youku_price.h
src/adservice/adservice/service/utility/: aero_spike.cpp  aero_spike.h  compress.cpp  compress.h  cypher.cpp  cypher.h  escape.cpp  escape.h  file.cpp  file.h  gzip.h  hash.cpp  hash.h  http.cpp  http.h  ip.cpp  json.cpp  json.h  memory.cpp  mttytime.cpp  mttytime.h  promise.cpp  promise.h  random.cpp  template_engine.cpp  template_engine.h  url.cpp  url.h  userclient.cpp  userclient.h  utility.h
src/adservice/adservice/test/: CMakeLists.txt  cookiemapping_test.cpp  executor_test.cpp  httpclient_test.cpp  ip_test.cpp  json_test.cpp  price_test.cpp  template_engine_test.cpp  urlhelper_test.cpp
src/adservice/adservice/tool/: CMakeLists.txt  kafka_checker.cpp  locallog_collector.cpp  recoverdata.sh  track_user.cpp  translate_user.cpp  update_from_db.cpp
src/adservice/adservice/tool/include/librdkafka/: config.h
(+31 files in other folders)
